<resources>
    <string name="app_name">Places Search</string>
    <string name="search_tab_text">Search</string>
    <string name="favorites_tab_text">Favorites</string>
    <string name="action_settings">Settings</string>
    <string name="keyword_label">Keyword</string>
    <string name="keyword_error">Please enter mandatory field</string>
    <string name="keyword_placeholder">Enter keyword</string>
    <string name="category_label">Category</string>
    <string name="distance_label">Distance (in miles)</string>
    <string name="distance_placeholder">Enter distance (default 10 miles)</string>
    <string name="from_label">From</string>
    <string name="here_label">Current Location</string>
    <string name="other_label">Other. Specify Location</string>
    <string name="location_placeholder">Type in the Location</string>
    <string name="search_button">Search</string>
    <string name="clear_button">Clear</string>
    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="info_tab_text">Info</string>
    <string name="photos_tab_text">Photos</string>
    <string name="map_tab_text">Map</string>
    <string name="reviews_tab_text">Reviews</string>
    <string name="info_address">Address</string>
    <string name="info_phone">Phone Number</string>
    <string name="info_price">Price Level</string>
    <string name="info_rating">Rating</string>
    <string name="info_google">Google Page</string>
    <string name="info_website">Website</string>
    <string name="search_error">No results</string>
    <string name="photos_error">No photos</string>
    <string name="reviews_error">No reviews</string>
    <string-array name="category_array">
        <item>Default</item>
        <item>Airport</item>
        <item>Amusement Park</item>
        <item>Aquarium</item>
        <item>Art Gallery</item>
        <item>Bakery</item>
        <item>Bar</item>
        <item>Beauty Salon</item>
        <item>Bowling Alley</item>
        <item>Bus Station</item>
        <item>Cafe</item>
        <item>Campground</item>
        <item>Car Rental</item>
        <item>Casino</item>
        <item>Lodging</item>
        <item>Movie Theater</item>
        <item>Museum</item>
        <item>Night Club</item>
        <item>Park</item>
        <item>Parking</item>
        <item>Restaurant</item>
        <item>Shopping Mall</item>
        <item>Stadium</item>
        <item>Subway Station</item>
        <item>Taxi Stand</item>
        <item>Train Station</item>
        <item>Transit Station</item>
        <item>Travel Agency</item>
        <item>Zoo</item>
    </string-array>
    <string-array name="travel_array">
        <item>Driving</item>
        <item>Bicycling</item>
        <item>Transit</item>
        <item>Walking</item>
    </string-array>
    <string-array name="review_type">
        <item>Google reviews</item>
        <item>Yelp reviews</item>
    </string-array>
    <string-array name="review_order">
        <item>Default order</item>
        <item>Highest rating</item>
        <item>Lowest rating</item>
        <item>Most recent</item>
        <item>Least recent</item>
    </string-array>
</resources>
